# mumbaihacks2025

./: .gitignore  CLASSIFICATION_GUIDE.md  CLASSIFICATION_SUMMARY.md  CLUSTERING_GUIDE.md  CLUSTERING_RECOMMENDATIONS.md  DOCKER_SETUP.md  EMBEDDINGS_AND_CLUSTERING.md  IMPLEMENTATION_SUMMARY.md  INGESTION_PLAN.md  PATTERN_DETECTION_GUIDE.md  PUBLIC_UPDATES_GUIDE.md  PUBLIC_UPDATES_SUMMARY.md  QUICKSTART.md  README.md  SCORING_METHODOLOGY.md  SYSTEM_CRITIQUE.md  VERIFICATION_GUIDE.md  VERIFICATION_SUMMARY.md  docker-compose.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
app/: __init__.py  dependencies.py  graph.py  main.py
app/core/: __init__.py  classification.py  clustering.py  ingestion.py  models.py  pattern_detection.py  public_updates.py  storage.py  vectorization.py  verification.py
app/routes/: __init__.py  classification.py  clustering.py  health.py  ingestion.py  pattern_detection.py  public_updates.py  verification.py  verify.py
docker/: .dockerignore  README.md
examples/: datapoints_all_topics.json  datapoints_emergency_disaster.json  datapoints_example.json  datapoints_health_guidelines.json  datapoints_health_virus.json  datapoints_misinformation.json  datapoints_vaccines.json  raw_data.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  (+2 more)
scripts/: check_together_api.py  diagnose_clustering.py  ingest_all_topics.sh  test_classification.py  test_clustering.py  test_clustering_params.py  test_pattern_detection.py  test_public_updates.py  test_verification.py  verify_mongodb.py
(+10 files in other folders)
